@@ -103,6 +103,7 @@
 		in Explorer and choose the appropriate context menu item to defragment them.</li>
 		<li>Very small engine written in pure C.</li>
 		<li>Nice graphical interface - compact, functional and easy to use.</li>
+		<li>Ability to automatically shutdown or hibernate PC after a job.</li>
 		<li>Powerful command line interface.</li>
 		<li>Safety, because the file moving is accomplished with Microsoft's own Defrag API.</li>
 		<li>Simple to use.</li>
